--- a/_includes/article.html
+++ b/_includes/article.html
@@ -14,7 +14,7 @@ body_class: blog-post-page-body-class # Define a variable for the body class
 
     <!-- Back Link (Moved Up & Centered via CSS) -->
     <div class="back-link-container">
-        <a href="/blog.html" class="back-link">&larr; Back to Blog</a>
+        <a href="/blog/" class="back-link">&larr; Back to Blog</a>
     </div>
 
     <!-- TOC Controls (Moved Up & Sticky via CSS) -->
